# UniffiAndroidDemo

./: .gitignore  README.org  build.gradle  flake.nix  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/uniffidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/uniffidemo/: MainActivity.kt
app/src/main/java/com/example/uniffidemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/uniffidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/hello/: Cargo.toml  build.rs  uniffi.toml
rust/hello/src/: hello.udl  lib.rs
